        ======= plasma release 0.8.4 (v0_8_4) on Linux (cde-tx32-ldt189) =======

        ======= plasma release 0.8.4 (v0_8_4) on Linux (cde-tx32-ldt189) =======


2004-11-12  Brian Kahne  <bkahne@ibmoto.com>

        ======= plasma release 0.8.3 (v0_8_3) on Linux (cde-tx32-ldt189) =======

	* Fixed next_phi() equation b/c clocked channels with a skew could
	have multiple reads at the same time if the second read occurred
	on a cycle boundary.

2004-11-11  Brian Kahne  <bkahne@ibmoto.com>

	* Clocked channels now take three parameters:  Period, skew, and
	size.  Skew defaults to 0.  This lets a user have a channel that's
	delayed with respect to other clocked channels, but with the same
	period, e.g. a half-cycle delay.  Regression "clock5" tests this.

        ======= plasma release 0.8.2 (v0_8_2) on Linux (cde-tx32-ldt189) =======

2004-11-04  Brian Kahne  <bkahne@ibmoto.com>

	* All channels now define value_type as the type of the channel.

        ======= plasma release 0.8.1 (v0_8_1) on Linux (cde-tx32-ldt189) =======

2004-11-02  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed a bug with clocked channels: If you wrote to a clocked
	channel, then delayed by the clock period, you'd get a segfault
	because we would have started a delayed waker, then done our own
	reset (because we're now on a clock boundary) without canceling
	that waker thread.  Fixed this by canceling the thread if it
	exists.  Added "clock4" to test this.

2004-10-13  Brian Kahne  <bkahne@ibmoto.com>

	* Added plasma.m4, a macro that can be used by plasma users to
	detect plasma.

        ======= plasma release 0.8.0 (v0_8_0) on Linux (cde-tx32-ldt189) =======

2004-10-08  Brian Kahne  <tdukes@freescale.com>

	* Port to PowePC:  Minor changes to fix regressions, plus I fixed
	a bug with the parser- I had some STL data structures that didn't
	use a traceable allocator.

2004-10-07  Brian Kahne  <bkahne@ibmoto.com>

	* Added QuickThreads PowerPC port to the qt directory.  This