@@ -1,0 +1,46 @@
+//
+// Simple test of the par block.
+//
+
+#include <stdio.h>
+
+#include "plasma.h"
+
+const int Count = 1000000;
+
+int pMain(int argc,const char *argv[])
+{
+  int result1 = 0, result2 = 0, result3 = 0;
+
+  par {
+    {
+      for (int i = 0; i != 10; ++i) {
+        int j = 0;
+        for (int i = 0; i != Count; ++i) {
+          j += 1;
+        }
+        plasma::mprintf ("In block 1.\n");
+      }
+      result1 = 69;
+      plasma::mprintf ("Done with block 1.\n");
+    };;
+    {
+      for (int j = 0; j != 10; ++j) {
+        int j = 0;
+        for (int i = 0; i != Count; ++i) {
+          j += 1;
+        }
+        plasma::mprintf("In block 2.\n");
+      }
+      result2 = 200;
+      plasma::mprintf ("Done with block 2.\n");
+    };;
+    {
+      plasma::mprintf("In block 3.\n");
+      result3 = 1000;
+      plasma::mprintf ("Done with block 3.\n");
+    }
+  }
+  plasma::mprintf ("Result1:  %d,  Result2:  %d,  Result3:  %d\n",result1,result2,result3);
+  return 0;
+}
