@@ -1,7 +1,13 @@
-        ======= plasma release 0.8.4 (v0_8_4) on Linux (cde-tx32-ldt189) =======
+
+2004-11-16  Brian Kahne  <bkahne@ibmoto.com>
 
         ======= plasma release 0.8.4 (v0_8_4) on Linux (cde-tx32-ldt189) =======
+	
+	* Fixed bug:  Empty statements, i.e. just a semicolon, in a par
+	block would cause the parser to crash because it would try to
+	extract stuff from an empty object.
 
+        ======= plasma release 0.8.4 (v0_8_4) on Linux (cde-tx32-ldt189) =======
 
 2004-11-12  Brian Kahne  <bkahne@ibmoto.com>
 
